[package]
name = "mpnc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
tokio-serde={version="0.8", features=["bincode"]}
tokio-util={version="0.6", features=["codec"]}
serde = { version = "1.0", features = ["derive"] }
bincode="1.3"
cbor="0.4"
rmp-serde="1"
futures = "0.3.19"
